# -2018-11-16-bf-api-ibge

./: .gitignore  Makefile  pyproject.toml  specs-base.yaml
raw_htmls/: agregados_v2.0.html  agregados_v3.0.html  calendarios_v3.0.html  cnae_v2.0.html  localidades_v1.0.html  malhas_v2.0.html  metadados_v2.0.html  nomes_v2.0.html  noticias_v3.0.html  pesquisas_v1.0.html  produtos_v1.0.html  projecoes_v1.0.html  publicacoes_v1.0.html
specs/: agregados_v2.0.yaml  agregados_v3.0.yaml  calendarios_v3.0.yaml  cnae_v2.0.yaml  localidades_v1.0.yaml  malhas_v2.0.yaml  metadados_v2.0.yaml  nomes_v2.0.yaml  noticias_v3.0.yaml  pesquisas_v1.0.yaml  produtos_v1.0.yaml  projecoes_v1.0.yaml  publicacoes_v1.0.yaml
src/: __init__.py  __main__.py  util.py
